Fixing whitespace under home bg-img

--- a/styles.css
+++ b/styles.css
@@ -213,14 +213,16 @@ nav {
   height: 100vh;
   font-family: "Ubuntu", sans-serif;
   -webkit-text-stroke: 0.5px hsl(0, 0%, 100%);
+  overflow-y: hidden;
 }
 
 .home .bg-img {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   left: 0;
   bottom: 0;
+  overflow-y: hidden;
   z-index: 1;
 }
 
